--- a/package.json
+++ b/package.json
@@ -3,18 +3,26 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.1.2",
-    "@angular/common": "^17.1.2",
-    "@angular/compiler": "^17.1.2",
-    "@angular/core": "^17.1.2",
-    "@angular/forms": "^17.1.2",
-    "@angular/platform-browser": "^17.1.2",
-    "@angular/router": "^17.1.2",
+    "@angular/animations": "16.2.10",
+		"@angular/cdk": "16.2.9",
+		"@angular/common": "16.2.10",
+		"@angular/compiler": "16.2.10",
+		"@angular/compiler-cli": "~16.1.1",
+		"@angular/core": "16.2.10",
+		"@angular/flex-layout": "15.0.0-beta.42",
+		"@angular/forms": "16.2.10",
+		"@angular/localize": "16.2.10",
+		"@angular/material": "16.2.9",
+		"@angular/platform-browser": "16.2.10",
+		"@angular/platform-browser-dynamic": "16.2.10",
+		"@angular/router": "16.2.10",
+		"@angular/service-worker": "16.2.10",
+
     "highcharts": "10.2.1",
     "highcharts-angular": "3.0.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
-    "zone.js": "^0.14.3"
+    "zone.js": "^0.13.1"
   },
   "scripts": {
     "ng": "ng",
@@ -25,22 +33,33 @@
     "e2e": "ng e2e"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.4",
-    "@angular/cli": "~11.0.4",
-    "@angular/compiler-cli": "~11.0.4",
+    "@angular-devkit/build-angular": "16.2.7",
+		"@angular-devkit/core": "16.2.7",
+		"@angular-devkit/schematics": "16.2.7",
+		"@angular-eslint/builder": "16.0.3",
+		"@angular-eslint/eslint-plugin": "16.0.3",
+		"@angular-eslint/eslint-plugin-template": "16.0.3",
+		"@angular-eslint/schematics": "16.0.1",
+		"@angular-eslint/template-parser": "16.0.3",
+		"@angular/cli": "~16.2.0",
+		"@angular/compiler-cli": "16.2.10",
+		"@angular/language-service": "16.2.10",
+
+    "@types/express": "^4.17.21", 
+		"@types/jest": "^29.5.0",
+		"@types/jest-when": "^3.5.5",
+		"@types/morgan": "^1.9.9", 
+		"@types/uuid": "^8.3.1",
+		"@typescript-eslint/eslint-plugin": "5.62.0",
+		"@typescript-eslint/parser": "5.62.0",
+
+
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "codelyzer": "^6.0.0", 
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "5.1.6"
   }
 }
